QA-7333: various fixes in voucher test set