@@ -1,5 +1,7 @@
 package it.pagopa.pn.interop.cucumber.steps.authorization;
 
+import static java.util.stream.Collectors.toList;
+
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
 import it.pagopa.interop.authorization.service.utils.IdentityService;
@@ -56,9 +58,10 @@ public class ClientCommonSteps {
     public void createClientsForTenants(String tenantType, int numClient, String clientKind) {
         clientTokenConfigurator.setBearerToken(identityService.getToken(tenantType, null));
 
+        @SuppressWarnings("java:S6204") // si evita volutamente il metodo diretto toList() perché produrrebbe una lista immutabile
         List<UUID> clientIds = IntStream.range(0, numClient)
                 .mapToObj(i -> dataPreparationService.createClient(clientKind, createClientSeed(i)))
-                .toList();
+                .collect(toList());
         sharedStepsContext.getClientCommonContext().setClients(clientIds);
     }
 
